<resources>
    <string name="app_name">To Do</string>
    <string name="sort">Sort</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="search">Search</string>
    <string name="new_to_do_title">What\'s in your mind?</string>
    <string name="new_to_do_description">Description..</string>
    <string name="no_date">No Date</string>
    <string name="category_name">Category Name</string>
    <string name="add_new_category_label">Add New Category</string>
    <string name="edit_category_label">Edit Category</string>
    <string name="new_task_label">New Task</string>
    <string name="category_color_label">Category Color: </string>
    <string name="all_category">All</string>
    <string name="title">Title</string>
    <string name="to_do_description">Description</string>
    <string name="new_to_do_action_button">add to do</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_category">choose category</string>
    <string name="reschedule_to_do_btn">reschedule</string>
    <string name="add_category_btn_description">add</string>
    <string name="done">Done</string>
    <string name="delete_to_do">Delete</string>
    <string name="no_to_do">You don\'t have any to do</string>
    <string name="to_do_creation_label">Created:</string>
    <string name="sort_by_label">Sort by:</string>
    <string name="automatic_sorting_label">Automatic sorting</string>
    <string name="due_date_label">Due Date</string>
    <string name="creation_date_label">Creation Date</string>
    <string name="alphabetical_sort_label">Alphabetical</string>
    <string name="category_sort_label">Category</string>
    <string name="reschedule_label">Reschedule or delete this to do.</string>
    <string name="select_category">Select Category</string>
    <string name="channel_name">my chanell</string>
    <string name="location">Location</string>
    <string name="no_category">You haven\'t made any category to edit.</string>
</resources>