<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/sort_by_label"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cancelSortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="#02FFFFFF"
            android:contentDescription="@string/cancel"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_cancel_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1sp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="35dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <RadioGroup
            android:id="@+id/sortRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3">

            <RadioButton
                android:id="@+id/autoSortRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automatic_sorting_label" />

            <RadioButton
                android:id="@+id/byDueDateRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/due_date_label" />

            <RadioButton
                android:id="@+id/byCreationDateRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creation_date_label" />

            <RadioButton
                android:id="@+id/byAlphabeticalRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alphabetical_sort_label" />

            <RadioButton
                android:id="@+id/byCategoryRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_sort_label" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>